# textgraphs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION  LICENSE  MANIFEST.in  NOTES.md  PROMPT.md  README.md  SECURITY.md  app.py  demo.ipynb  demo.py  gen_kg.py  gor.json  gor.py  mkdocs.yml  ner.py  pkg_doc.cfg  pkg_doc.py  pyfixdoc.py  pyproject.toml  rebel.py  requirements-dev.txt  requirements.txt  sense.py  wiki.py
.github/workflows/: ci.yml
dat/: ner_map.json
docs/: abstract.md  ack.md  biblio.md  build.md  conclude.md  details.md  ex0_0.md  ex1_0.md  ex2_0.md  glod.md  glossary.md  graph.md  hitl.md  index.md  lemma.md  methods.md  nlp.md  objectives.md  prob.md  ref.md  related.md  rubric.md  start.md  strategy.md  tldr.md  topo.md  tutorial.md
docs/assets/: textgraphs.graffle
docs/demo/: blurb.1.html
examples/: demo.ipynb  ex0_0.ipynb  ex1_0.ipynb  ex2_0.ipynb  fish.py  ingram.json  notus.py  tutorial.ipynb
tests/: test_extract.py  test_load.py
textgraph/: __init__.py  defaults.py  doc.py  elem.py  graph.py  pipe.py  rebel.py  util.py  vis.py  wiki.py
textgraphs/: __init__.py  defaults.py  doc.py  elem.py  gor.py  graph.py  kg.py  ner.py  pipe.py  rebel.py  rel.py  util.py  version.py  vis.py  wiki.py
