[build-system]

build-backend = "setuptools.build_meta"

requires = [
    "setuptools >= 69.0",
    "setuptools-scm",
    "wheel >= 0.42",
]


[tool.setuptools]

packages = [ "textgraphs" ]


[project.urls]

home = "https://huggingface.co/spaces/DerwenAI/textgraphs"


[project]

name = "textgraphs"
version = "0.1.2"

authors = [
    { name = "derwen.ai", email = "info@derwen.ai" },
]

description = "Using textgraphs + LLM + graph ML for entity extraction, linking, and ranking"
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.9"

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "beautifulsoup4 >= 4.12",
    "icecream >= 2.1",
    "markdown2 >= 2.4",
    "matplotlib >= 3.8",
    "networkx >= 3.2",
    "pulp >= 2.7",
    "pyvis >= 0.3",
    "qwikidata >= 0.4",
    "spacy >= 3.7",
    "spacy-dbpedia-spotlight >= 0.2.6",
    "spacyfishing >= 0.1.8",
    "span_marker >= 1.5",
    "transformers >= 4.35",
    "wordcloud >= 1.9",
]


[project.optional-dependencies]

dev = [
    "build >= 1.0",
    "pre-commit >= 3.5",
    "twine >= 4.0",
]

test = [
    "pytest >= 7.4",
]

demo = [
    "ipywidgets >= 8.1",
    "jupyterlab_execute_time >= 3.1",
    "jupyterlab >= 4.0",
    "pyinstrument >= 4.6",
    "sense2vec >= 2.0",
    "spacy-entity-linker >= 1.0",
    "streamlit < 1.29",
]
